# red-pak

./: .env  .gitignore  CHANGELOG  CMakeLists.txt  MAINTAINERS  README.md  index-order  merge-html.sh  mkpdf.sh  mkrefs.sh  mksite.sh  red-pak.pc.in
QA/: .gitattributes  REDPAK.CNF.md  REDPAK.DSG.md  REDPAK.DTC.md  REDPAK.HRQ.md  REDPAK.IDX.md  REDPAK.OVE.md  (+2 more)
docs/: 1-Introduction.md  2-Concept.md  3-Configuration.md  4-Usage.md  5-Config-yaml-files-good-practices.md  6-Troubleshooting.md  7-Cgroups.md  CMakeLists.txt  Dependencies-Debug-Fulup.txt  LXC-Install-Fulup.txt  Redpack-DNF-Install.txt  redconf.8.scd  redpak-book.yml  unset.sh
docs/images/: default.txt  main-system.txt
docs/old_docs/: ToBeDone-Fulup.txt
docs/yaml/: default.txt  leaf-normal.yaml  main-system.txt  root-normal.yaml
python/: CMakeLists.txt
python/redconf-py/: CMakeLists.txt  redconf-py.c
red-conf/: CMakeLists.txt  Redconf-unshare.c  lookup3.c  lookup3.h  redconf-default.c  redconf-defaults.c  redconf-defaults.h  redconf-dump.c  redconf-dump.h  redconf-expand.c  redconf-expand.h  redconf-hash.c  redconf-hash.h  redconf-hashmerge.c  redconf-hashmerge.h  redconf-log.c  redconf-log.h  redconf-merge.c  redconf-merge.h  redconf-mix.c  redconf-mix.h  redconf-node.c  redconf-node.h  redconf-schema.c  redconf-schema.h  redconf-sharing.c  redconf-sharing.h  redconf-utils.c  redconf-utils.h  redconf-valid.c  redconf-valid.h  redconf.h  rednode-factory.c  rednode-factory.h
red-conf/commands/: CMakeLists.txt  cmd-config.c  cmd-config.h  cmd-create.c  cmd-create.h  cmd-mergeconfig.c  cmd-mergeconfig.h  cmd-tree.c  cmd-tree.h  config.c  config.h  globconf.h  mergeconfig.c  mergeconfig.h  options.c  options.h  redconf.c  tree.c  tree.h  utils.c  utils.h
red-conf/sandbox/: Redconf-unshare.c
red-dnf/module-py/sources-cpp/: CMakeLists.txt  catch-error.hpp  reddnf-py.cpp  reddnf-py.h
red-lib/: CMakeLists.txt  redconfig.cpp  redconfig.hpp  reddefaults.hpp  reddefaults.hpp.in  rednodefactory.hpp  redtransaction.cpp  redtransaction.hpp
red-microdnf/microdnf/: CMakeLists.txt  context.hpp  main.cpp
red-microdnf/microdnf/commands/install/: install.cpp
red-microdnf/microdnf/commands/manager/: manager.cpp  manager.hpp
red-microdnf/red-lib/: CMakeLists.txt  redconfig.cpp  redconfig.hpp  reddefaults.hpp.in  redtransaction.hpp
red-plugin/: CMakeLists.txt  rpm-redpak.c
red-rpm/module-py/sources-c/: CMakeLists.txt  _redts-README  redts-doc.inc  redts-enum.inc  redts-glue-py.c  redts-glue-py.h  redts-import-py.c  redts-import-py.h  redts-main-py.c  redts-main-py.h  rpmsystem-py.h
red-rpm/module-py/sources-c/rpmlib-ori/: README-rpmlib  header-py.c  rpmarchive-py.c  rpmds-py.c  rpmfd-py.c  rpmfiles-py.c  rpmkeyring-py.c  rpmmacro-py.c  rpmstrpool-py.c  rpmtd-py.c  rpmte-py.c
red-wrap/: CMakeLists.txt  cgroups.c  cgroups.h  redwrap-conf.c  redwrap-conf.h  redwrap-exec.c  redwrap-exec.h  redwrap-main.c  redwrap-main.h  redwrap-node.c  redwrap-node.h  redwrap.h
red-wrap/commands/: CMakeLists.txt  redwrap-cmd.c  redwrap-cmd.h  redwrap-dnf.c  redwrap.c
tests/: CMakeLists.txt  README.md  checks-conf.c  checks.c  do-check-data.sh
tests/basic/: .gitignore  basic-tests.tap  do-basic-tests.sh  gen-confs.sh
tests/basic/references/: config-cachedir:NULL  config-cachedir:config-cachedir  config-capa-cap_chown-0:NULL  config-capa-cap_chown-0:config-capa-cap_chown-0  config-capa-cap_chown-0:config-capa-cap_chown-1  config-capa-cap_chown-0:config-capa-cap_setuid-0  config-capa-cap_chown-0:config-capa-cap_setuid-1  config-capa-cap_chown-0__NULL  config-capa-cap_chown-0__config-capa-cap_chown-0  config-capa-cap_chown-0__config-capa-cap_setuid-1  config-capa-cap_chown-1:NULL  config-capa-cap_chown-1:config-capa-cap_chown-0  config-capa-cap_chown-1:config-capa-cap_chown-1  config-capa-cap_chown-1:config-capa-cap_setuid-0  config-capa-cap_chown-1:config-capa-cap_setuid-1  config-capa-cap_chown-1__config-capa-cap_chown-0  config-capa-cap_chown-1__config-capa-cap_chown-1  config-capa-cap_chown-1__config-capa-cap_setuid-0  config-capa-cap_setuid-0:NULL  config-capa-cap_setuid-0:config-capa-cap_chown-0  config-capa-cap_setuid-0:config-capa-cap_chown-1  config-capa-cap_setuid-0:config-capa-cap_setuid-0  config-capa-cap_setuid-0:config-capa-cap_setuid-1  config-capa-cap_setuid-0__NULL  config-capa-cap_setuid-0__config-capa-cap_chown-0  config-capa-cap_setuid-1:NULL  config-capa-cap_setuid-1:config-capa-cap_chown-0  config-capa-cap_setuid-1:config-capa-cap_chown-1  config-capa-cap_setuid-1:config-capa-cap_setuid-0  config-capa-cap_setuid-1:config-capa-cap_setuid-1  config-capa-cap_setuid-1__config-capa-cap_setuid-0  config-cgrouproot__NULL  config-cgrouproot__config-cgrouproot  config-chdir:NULL  config-chdir__config-chdir  config-die-with-parent-disabled:config-die-with-parent-enabled  config-die-with-parent-disabled__NULL  config-die-with-parent-disabled__config-die-with-parent-disabled  config-die-with-parent-disabled__config-die-with-parent-unset  config-die-with-parent-enabled:config-die-with-parent-disabled  (+337 more)
tests/conf/: conf-tests.tap  do-conf-tests.sh
tests/conf/data/: .gitignore  1-input  1-reference  2-input  2-reference  3-input  3-reference  4-input  4-reference  5-input  5-reference  6-input  6-reference  7-input  7-reference
tests/data/: 1-normal.yaml  1-prog  1-reference  2-desc  2-prog  2-reference  3-desc  3-normal.yaml  3-reference  4-normal.yaml  4-prog  4-reference  5-normal.yaml  5-reference  6-desc  6-prog  6-reference
tests/join/: conf-admin  conf-normal  do-join-test.sh  prog.c
tests/live/: do-live-tests.sh  live-tests.tap
tests/live/data/: .gitignore  0-admin.yaml  0-normal.yaml  1-desc  1-prog  1-reference  10-desc  10-normal.yaml  10-prog  10-reference  11-desc  11-normal.yaml  11-reference  12-desc  12-normal.yaml  12-prog  12-reference  13-desc  13-normal.yaml  13-prog  13-reference  14-desc  14-normal.yaml  14-prog  14-reference  15-desc  15-normal.yaml  15-prog  15-reference  2-desc  2-normal.yaml  2-reference  3-desc  3-prog  3-reference  4-desc  4-prog  4-reference  5-desc  5-normal.yaml  (+16 more)
(+68 files in other folders)
